Commit from Bungeni: Pootle Localisation Portal by user ashok.: 229 of 229 messages translated (0 fuzzy).

--- a/bungeni_custom/trunk/translations/bungeni.core/locales/en/LC_MESSAGES/bungeni.core.po
+++ b/bungeni_custom/trunk/translations/bungeni.core/locales/en/LC_MESSAGES/bungeni.core.po
@@ -3,8 +3,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Fri Apr 15 14:54:07 2011\n"
-"PO-Revision-Date: 2011-04-15 15:30+0300\n"
-"Last-Translator: Administrator <admin@apkn.org>\n"
+"PO-Revision-Date: 2011-04-15 17:21+0300\n"
+"Last-Translator: Ashok <ashok@parliaments.info>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: en\n"
 "MIME-Version: 1.0\n"
@@ -210,7 +210,7 @@ msgstr "schedule"
 
 #: src/bungeni.main/bungeni/core/audit.py:247
 msgid "Participation has no principal"
-msgstr ""
+msgstr "participation has no principal"
 
 #: src/bungeni.main/bungeni/core/dc.py:104
 msgid "Approved on"
@@ -234,7 +234,6 @@ msgid "to"
 msgstr "to"
 
 #: src/bungeni.main/bungeni/core/dc.py:176
-#, fuzzy
 msgid "Sitting scheduled for"
 msgstr "sitting scheduled for '$group' ($start to $end)"
 
@@ -248,9 +247,8 @@ msgid "Scheduled for sitting ($start to $end)"
 msgstr "scheduled for sitting ($start to $end)"
 
 #: src/bungeni.main/bungeni/core/dc.py:207
-#, fuzzy
 msgid "translation"
-msgstr "draft translation"
+msgstr "translation"
 
 #: src/bungeni.main/bungeni/core/dc.py:208
 msgid "Version"
@@ -645,7 +643,7 @@ msgstr "complete response"
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:302
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:306
 msgid "Submit"
-msgstr "submit to the clerk"
+msgstr "submit to clerk"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:470
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:91
@@ -718,12 +716,11 @@ msgstr "in compliance"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:559
 msgid "Inhume"
-msgstr ""
+msgstr "inhume"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:562
-#, fuzzy
 msgid "Resurrect"
-msgstr "reject"
+msgstr "resurrect"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:58
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:205
@@ -747,14 +744,12 @@ msgstr "approve"
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:255
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:264
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:307
-#, fuzzy
 msgid "Disapprove"
-msgstr "approve"
+msgstr "disapprove"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:64
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:305
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:316
-#, fuzzy
 msgid "Allow scheduling"
 msgstr "item scheduling"
 
@@ -765,7 +760,7 @@ msgstr "item scheduling"
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:152
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:283
 msgid "Require Recomplete to Approve"
-msgstr ""
+msgstr "require recomplete to approve"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:70
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:342
@@ -775,7 +770,6 @@ msgstr ""
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:171
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:250
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:301
-#, fuzzy
 msgid "Recomplete"
 msgstr "in compliance"
 
@@ -787,7 +781,6 @@ msgstr "in compliance"
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:179
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:257
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:309
-#, fuzzy
 msgid "Resubmit"
 msgstr "resubmit to clerk"
 
@@ -797,7 +790,6 @@ msgstr "resubmit to clerk"
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:126
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:258
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:310
-#, fuzzy
 msgid "Reschedule"
 msgstr "re-scheduled"
 
@@ -807,7 +799,6 @@ msgstr "re-scheduled"
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:162
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:242
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:291
-#, fuzzy
 msgid "Revert to admissible"
 msgstr "inadmissible"
 
@@ -829,7 +820,6 @@ msgstr "debate"
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:366
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:183
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:312
-#, fuzzy
 msgid "Adjourn debate"
 msgstr "adjourn"
 
@@ -970,7 +960,6 @@ msgstr "third reading pending"
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:150
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:233
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:281
-#, fuzzy
 msgid "Requires Clarification to Approve"
 msgstr "needs clarification"
 
@@ -1019,14 +1008,12 @@ msgid "Published Agenda"
 msgstr "published agenda"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:195
-#, fuzzy
 msgid "Sitting"
 msgstr "sittings"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:198
-#, fuzzy
 msgid "Create Sitting"
-msgstr "create motion"
+msgstr "create sitting"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:20
 msgid "First Reading Pending"
@@ -1148,14 +1135,12 @@ msgid "Inactive event"
 msgstr "inactive event"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:344
-#, fuzzy
 msgid "Published"
 msgstr "publish"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:345
-#, fuzzy
 msgid "Create Report"
-msgstr "create motion"
+msgstr "create report"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:41
 msgid "Create Bill"
@@ -1201,7 +1186,6 @@ msgstr "withdrawn"
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:137
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:224
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:269
-#, fuzzy
 msgid "Requires Clarification to Receive"
 msgstr "needs clarification"
 
@@ -1283,7 +1267,6 @@ msgid "Bill Withdrawn"
 msgstr "bill withdrawn"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:90
-#, fuzzy
 msgid "Require Clarification to Approve"
 msgstr "needs clarification"
 
