Commit from Bungeni: Pootle Localisation Portal by user flavio.: 229 of 229 messages translated (0 fuzzy).

--- a/bungeni_custom/trunk/translations/bungeni.core/locales/en/LC_MESSAGES/bungeni.core.po
+++ b/bungeni_custom/trunk/translations/bungeni.core/locales/en/LC_MESSAGES/bungeni.core.po
@@ -3,8 +3,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Fri Apr 15 14:54:07 2011\n"
-"PO-Revision-Date: 2011-04-15 17:21+0300\n"
-"Last-Translator: Ashok <ashok@parliaments.info>\n"
+"PO-Revision-Date: 2011-04-15 17:36+0300\n"
+"Last-Translator: Flavio <flavio.zeni@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: en\n"
 "MIME-Version: 1.0\n"
@@ -712,7 +712,7 @@ msgstr "table"
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:237
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:286
 msgid "Complete"
-msgstr "in compliance"
+msgstr "submit to house business"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:559
 msgid "Inhume"
@@ -771,7 +771,7 @@ msgstr "require recomplete to approve"
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:250
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:301
 msgid "Recomplete"
-msgstr "in compliance"
+msgstr "submit to house business"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:73
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:345
