Commit from Bungeni: Pootle Localisation Portal by user flavio.: 229 of 229 messages translated (0 fuzzy).

--- a/bungeni_custom/trunk/translations/bungeni.core/locales/en/LC_MESSAGES/bungeni.core.po
+++ b/bungeni_custom/trunk/translations/bungeni.core/locales/en/LC_MESSAGES/bungeni.core.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Fri Apr 15 14:54:07 2011\n"
-"PO-Revision-Date: 2011-04-15 17:36+0300\n"
+"PO-Revision-Date: 2011-04-15 17:58+0300\n"
 "Last-Translator: Flavio <flavio.zeni@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: en\n"
@@ -239,7 +239,7 @@ msgstr "sitting scheduled for '$group' ($start to $end)"
 
 #: src/bungeni.main/bungeni/core/dc.py:188
 msgid "Item scheduling"
-msgstr "item scheduling"
+msgstr "make available for scheduling"
 
 #. Default: ""
 #: src/bungeni.main/bungeni/core/dc.py:195
@@ -751,7 +751,7 @@ msgstr "disapprove"
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:305
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:316
 msgid "Allow scheduling"
-msgstr "item scheduling"
+msgstr "make available for scheduling"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:67
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:339
