Commit from Bungeni: Pootle Localisation Portal by user flavio.: 616 of 616 messages translated (0 fuzzy).

--- a/bungeni_custom/trunk/translations/bungeni.ui/locales/en/LC_MESSAGES/bungeni.ui.po
+++ b/bungeni_custom/trunk/translations/bungeni.ui/locales/en/LC_MESSAGES/bungeni.ui.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Fri Apr 15 14:53:26 2011\n"
-"PO-Revision-Date: 2011-04-15 17:07+0300\n"
+"PO-Revision-Date: 2011-04-15 20:41+0300\n"
 "Last-Translator: Flavio <flavio.zeni@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: en\n"
@@ -1901,7 +1901,7 @@ msgstr "rss"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:177
 msgid "Add Political Group Member..."
-msgstr "add political group..."
+msgstr "add political group member..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:1792
 #: src/bungeni.main/bungeni/ui/menu.zcml:1800
