--- a/wiki/HowTo_Generate_i18nCatalogs.wiki
+++ b/wiki/HowTo_Generate_i18nCatalogs.wiki
@@ -3,75 +3,30 @@
 
 = How to setup i18n scripts =
 
-due to a minor issue in one of the recipes used in buildout, we need to modify the generated i18n scripts to include the path to our xapian library.
+Due to a minor issue in one of the recipes used in buildout, we need to modify the generated i18n scripts to include the path to our xapian library.
 
 so after running buildout you'll need to add an additional 
 
  '$buildout_directory/parts/xapian/lib/python' 
 
-to the list at the top of the bin/i18nextract script, substituting the full path for $buildout_directory. after which you can use the i18nextract script to generate a message catalog (pot file) for translation.
+to the list at the top of the *bin/i18nextract* and *bin/i18nmergeall* script, substituting the full path for $buildout_directory. after which you can use the i18nextract script to generate a message catalog (pot file) for translation.
 
-
-replace the lines 
-{{{
-import lovely.recipe.i18n.i18nextract
-
-if __name__ == '__main__':
-    lovely.recipe.i18n.i18nextract.main(['i18nextract', '-d', 'bungeni', '-s', '/home/undesa/devel/svn/bungeni-portal/parts/i18n/configure.zcml', '-p', 'src/bungeni.core', '-o', 'locales'])
-}}}
-
-with
-{{{
-
-import lovely.recipe.i18n.i18nextract
-import getopt, os, bungeni_custom
-os.environ["zope_i18n_allowed_languages"] = bungeni_custom.zope_i18n_allowed_languages
-
-argv = sys.argv[1:]
-
-try:                                
-    opts, args = getopt.getopt(argv, "p:d:", ["path=", "domain="])
-except getopt.GetoptError:          
-    usage()                         
-    sys.exit(2)       
-
-domain = 'bungeni'
-path = 'src/bungeni.core'
-for opt, arg in opts:                
-    if opt in ("-p", "--path"):      
-        path = arg
-    if opt in ("-d", "--domain"):      
-        domain = arg
-
-print 'generate locales for domain: ', domain, ' in: ', path
-print  
-      
-if __name__ == '__main__':
-    lovely.recipe.i18n.i18nextract.main(['i18nextract', 
-        '-d', domain, 
-        '-s', 'parts/i18n/configure.zcml', 
-        '-p', path, 
-        '-o', 'locales'])
-
-}}}
 
 = Generate i18n catalogs =
 
-First, extract the msg strings of workflow states run (WHY!!!!! This needs to be fixed)
+First, extract the message strings of workflow states run (WHY!!!!! This needs to be fixed)
 
 {{{ ./bin/python src/bungeni.main/bungeni/core/workflows/exctractwfi18n.py }}}
 
-Then, to generate the POT files run the following commands
+Then, to generate the POT file run the following command
 
 {{{
-./bin/i18nextract -d bungeni.ui -p src/bungeni.main/bungeni/ui/
-./bin/i18nextract -d bungeni.models -p src/bungeni.main/bungeni/models/
-./bin/i18nextract -d bungeni.core -p src/bungeni.main/bungeni/core/
+./bin/i18nextract
 }}}
 
-The POT files will be created in locales directory in the package eg. for bungeni.ui the POT file will be in src/bungeni.ui/bungeni/ui/locales
+The POT file will be created in locales directory in `src/bungeni.main/bungeni/locales`
 
-You may get errors like the ones below but the catalogs are still generated
+You may get errors like the ones below but the catalog are still generated
 
 {{{
 /home/bungeni/cap_installs/bungeni_install/bungeni/releases/20091029070249/src/ore.alchemist/src/ore/alchemist/introspector.py:22: SADeprecationWarning: the information_schema module is deprecated.
@@ -92,59 +47,14 @@ To merge old translation catalogs with new ones, one needs have gettext installe
    sudo apt-get install gettext
 }}}
 
-Use the 'i18nmergeall' script in bin directory of the bungeni buildout.
-First add the xapian python library path to the script as above. Then replace all the text after
+Then run this command to merge the pot file with the po files for all enabled languages
 {{{
-import lovely.recipe.i18n.i18nmergeall
-}}}
-with
-{{{
-import lovely.recipe.i18n.i18nmergeall
-import getopt, os, bungeni_custom
-os.environ["zope_i18n_allowed_languages"] = bungeni_custom.zope_i18n_allowed_languages
-
-argv = sys.argv[1:]
-apps_to_merge = ['core','models','ui']
-
-try:                                
-    opts, args = getopt.getopt(argv, "p:", ["path=",])
-except getopt.GetoptError:          
-    usage()                         
-    sys.exit(2)       
-
-path = ''
-for opt, arg in opts:
-    if opt in ("-p", "--path"):      
-        path = arg
-
-if not path:
-    print 'No path provided call with "-p <<locales_path_to_merge>>" or with "-p all" to merge all'
-    sys.exit(2)
-
-if __name__ == '__main__':
-    if path == 'all':
-        for app_name in apps_to_merge:
-            app_path = 'src/bungeni.main/bungeni/%s/locales' \
-            %(app_name)
-            lovely.recipe.i18n.i18nmergeall.main(['i18nmergeall', '-l', 
-            app_path])
-    else:
-        lovely.recipe.i18n.i18nmergeall.main(['i18nmergeall', '-l', path])
-}}}
-
-Then run this command to merge the pot file with the po files for all languages
-{{{
-   ./bin/i18nmergeall -p all
-}}}
-
-or merge a particular package this way (for the core package)
-{{{
-   ./bin/i18nmergeall -p src/bungeni.main/bungeni/core/locales/
+   ./bin/i18nmergeall
 }}}
 
 Alternatively, use the msgmerge tool directly to merge the old translations with the new ones for each PO files e.g. for the en translation catalog for bungeni.ui 
 
 {{{
-cd src/bungeni.ui/bungeni/ui/locales/
-msgmerge -U en/LC_MESSAGES/bungeni.ui.po bungeni.pot
+cd src/bungeni.main/bungeni/locales/
+msgmerge -U en/LC_MESSAGES/bungeni.po bungeni.pot
 }}}
