Commit from Bungeni: Pootle Localisation Portal by user murithi.: 994 of 994 messages translated (0 fuzzy).

--- a/bungeni_custom/trunk/translations/bungeni/en/LC_MESSAGES/bungeni.po
+++ b/bungeni_custom/trunk/translations/bungeni/en/LC_MESSAGES/bungeni.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Tue Apr 19 16:34:41 2011\n"
-"PO-Revision-Date: 2011-04-20 16:41+0300\n"
+"PO-Revision-Date: 2011-04-20 17:27+0300\n"
 "Last-Translator: Murithi <bungeni.translator@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: en\n"
@@ -3305,7 +3305,7 @@ msgstr "duplicate value for unique field"
 #. Default: "choose ${title} ..."
 #: src/bungeni.main/bungeni/ui/forms/common.py:296
 msgid "bungeni_widget_no_value"
-msgstr "bungeni widget no value"
+msgstr "choose ${title} ..."
 
 #. Default: "Add $name"
 #: src/bungeni.main/bungeni/ui/forms/common.py:320
@@ -3673,7 +3673,7 @@ msgstr "add venue..."
 
 #: src/bungeni.main/bungeni/ui/menu-vocabularies.zcml:8
 msgid "Add address type..."
-msgstr "address type"
+msgstr "add address type..."
 
 #. Default: "Language:"
 #: src/bungeni.main/bungeni/ui/menu.py:139
