Commit from Bungeni: Pootle Localisation Portal by user murithi.: 994 of 994 messages translated (0 fuzzy).

--- a/bungeni_custom/trunk/translations/bungeni/en/LC_MESSAGES/bungeni.po
+++ b/bungeni_custom/trunk/translations/bungeni/en/LC_MESSAGES/bungeni.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Tue Apr 19 16:34:41 2011\n"
-"PO-Revision-Date: 2011-04-20 17:27+0300\n"
+"PO-Revision-Date: 2011-04-21 16:23+0300\n"
 "Last-Translator: Murithi <bungeni.translator@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: en\n"
@@ -3661,11 +3661,11 @@ msgstr "add bill type..."
 
 #: src/bungeni.main/bungeni/ui/menu-vocabularies.zcml:22
 msgid "Add attendance type..."
-msgstr "add attendance..."
+msgstr "add attendance type..."
 
 #: src/bungeni.main/bungeni/ui/menu-vocabularies.zcml:29
 msgid "Add committee type..."
-msgstr "add committee..."
+msgstr "add committee type..."
 
 #: src/bungeni.main/bungeni/ui/menu-vocabularies.zcml:36
 msgid "Add venue..."
