--- a/bungeni_custom/trunk/translations/bungeni/en_KE/LC_MESSAGES/bungeni.po
+++ b/bungeni_custom/trunk/translations/bungeni/en_KE/LC_MESSAGES/bungeni.po
@@ -3,13 +3,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Tue Apr 19 16:34:41 2011\n"
-"PO-Revision-Date: 2010-07-21 10:59+0300\n"
-"Last-Translator: Murithi <bungeni.translator@gmail.org>\n"
+"PO-Revision-Date: 2011-04-21 16:26+0300\n"
+"Last-Translator: Murithi <bungeni.translator@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: en_KE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: en_KE\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.0.4\n"
 "Language-Code: en_KE\n"
@@ -3661,11 +3661,11 @@ msgstr "add bill type..."
 
 #: src/bungeni.main/bungeni/ui/menu-vocabularies.zcml:22
 msgid "Add attendance type..."
-msgstr "add attendance..."
+msgstr "add attendance type..."
 
 #: src/bungeni.main/bungeni/ui/menu-vocabularies.zcml:29
 msgid "Add committee type..."
-msgstr "add committee..."
+msgstr "add committee type..."
 
 #: src/bungeni.main/bungeni/ui/menu-vocabularies.zcml:36
 msgid "Add venue..."
