Commit from Bungeni: Pootle Localisation Portal by user flavio.: 994 of 994 messages translated (0 fuzzy).

--- a/bungeni_custom/trunk/translations/bungeni/en/LC_MESSAGES/bungeni.po
+++ b/bungeni_custom/trunk/translations/bungeni/en/LC_MESSAGES/bungeni.po
@@ -3,8 +3,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Tue Apr 19 16:34:41 2011\n"
-"PO-Revision-Date: 2011-04-21 16:23+0300\n"
-"Last-Translator: Murithi <bungeni.translator@gmail.com>\n"
+"PO-Revision-Date: 2011-04-22 15:31+0300\n"
+"Last-Translator: Flavio <flavio.zeni@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: en\n"
 "MIME-Version: 1.0\n"
@@ -232,7 +232,7 @@ msgstr "e-mail settings"
 #: src/bungeni.main/bungeni/core/app.py:292
 #: src/bungeni.main/bungeni/core/app.py:293
 msgid "xapian settings"
-msgstr "email settings"
+msgstr "xapian settings"
 
 #: src/bungeni.main/bungeni/core/app.py:322
 msgid "vocabularies"
@@ -1334,7 +1334,7 @@ msgstr "needs clarification"
 
 #: src/bungeni.main/bungeni/models/interfaces.py:222
 msgid "Speaker's Office Email"
-msgstr "house business office emai"
+msgstr "house business office email"
 
 #: src/bungeni.main/bungeni/models/interfaces.py:226
 msgid "Speaker's Office Notification"
