Commit from Bungeni: Pootle Localisation Portal by user flavio.: 994 of 994 messages translated (0 fuzzy).

--- a/bungeni_custom/trunk/translations/bungeni/en/LC_MESSAGES/bungeni.po
+++ b/bungeni_custom/trunk/translations/bungeni/en/LC_MESSAGES/bungeni.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Tue Apr 19 16:34:41 2011\n"
-"PO-Revision-Date: 2011-04-22 15:31+0300\n"
+"PO-Revision-Date: 2011-04-23 19:36+0300\n"
 "Last-Translator: Flavio <flavio.zeni@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: en\n"
@@ -2944,7 +2944,7 @@ msgstr "report"
 #: src/bungeni.main/bungeni/ui/menu.zcml:127
 #: src/bungeni.main/bungeni/ui/menu.zcml:136
 msgid "Reports"
-msgstr "reports"
+msgstr "publications"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:2511
 msgid "Publications type"
