Commit from Bungeni: Pootle Localisation Portal by user murithi.: 994 of 994 messages translated (0 fuzzy).

--- a/bungeni_custom/trunk/translations/bungeni/it/LC_MESSAGES/bungeni.po
+++ b/bungeni_custom/trunk/translations/bungeni/it/LC_MESSAGES/bungeni.po
@@ -3,8 +3,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Tue Apr 19 16:34:41 2011\n"
-"PO-Revision-Date: 2011-04-23 17:31+0300\n"
-"Last-Translator: Flavio <flavio.zeni@gmail.com>\n"
+"PO-Revision-Date: 2011-04-26 11:09+0300\n"
+"Last-Translator: Murithi <bungeni.translator@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
@@ -167,7 +167,7 @@ msgstr "una rassegna delle attività quotidiane del parlamento"
 
 #: src/bungeni.main/bungeni/core/app.py:198
 msgid "Publications"
-msgstr "pubblicazioni di tipo"
+msgstr "pubblicazioni"
 
 #: src/bungeni.main/bungeni/core/app.py:200
 msgid "View Agenda and Minutes reports of the current parliament"
@@ -3757,7 +3757,7 @@ msgstr "sposta agenda in basso"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:1212
 msgid "Home"
-msgstr "home"
+msgstr "casa"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:1255
 #: src/bungeni.main/bungeni/ui/menu.zcml:1263
