--- a/bungeni_custom/trunk/translations/bungeni/en/LC_MESSAGES/bungeni.po
+++ b/bungeni_custom/trunk/translations/bungeni/en/LC_MESSAGES/bungeni.po
@@ -3,13 +3,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Tue Apr 26 15:46:42 2011\n"
-"PO-Revision-Date: 2011-04-23 19:36+0300\n"
-"Last-Translator: Flavio <flavio.zeni@gmail.com>\n"
+"PO-Revision-Date: 2011-04-26 15:56+0300\n"
+"Last-Translator: Murithi <bungeni.translator@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: en\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.0.4\n"
 "Language-Code: en\n"
@@ -999,7 +999,6 @@ msgstr "third reading pending"
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:150
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:233
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:281
-#, fuzzy
 msgid "Requires Clarification to Approve"
 msgstr "needs clarification"
 
@@ -1222,7 +1221,6 @@ msgstr "withdrawn"
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:137
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:224
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:269
-#, fuzzy
 msgid "Requires Clarification to Receive"
 msgstr "needs clarification"
 
@@ -1304,7 +1302,6 @@ msgid "Bill Withdrawn"
 msgstr "bill withdrawn"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:90
-#, fuzzy
 msgid "Require Clarification to Approve"
 msgstr "needs clarification"
 
@@ -3614,9 +3611,8 @@ msgid "add event"
 msgstr "add event"
 
 #: src/bungeni.main/bungeni/ui/forms/viewlets.py:628
-#, fuzzy
 msgid "Timeline"
-msgstr "chronology"
+msgstr "timeline"
 
 #: src/bungeni.main/bungeni/ui/forms/viewlets.py:744
 #: src/bungeni.main/bungeni/ui/forms/templates/mp_item_viewlet.pt:1
