Commit from Bungeni: Pootle Localisation Portal by user undesa.: 987 of 987 messages translated (0 fuzzy).

--- a/bungeni_custom/trunk/translations/bungeni/it/LC_MESSAGES/bungeni.po
+++ b/bungeni_custom/trunk/translations/bungeni/it/LC_MESSAGES/bungeni.po
@@ -3,13 +3,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Tue Apr 26 15:46:42 2011\n"
-"PO-Revision-Date: 2011-04-26 11:09+0300\n"
-"Last-Translator: Murithi <bungeni.translator@gmail.com>\n"
+"PO-Revision-Date: 2011-04-26 18:46+0300\n"
+"Last-Translator: Flavio <flavio.zeni@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: it\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.0.4\n"
 "Domain: DOMAIN\n"
@@ -999,7 +999,6 @@ msgstr "in attesa di terza lettura"
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:150
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:233
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:281
-#, fuzzy
 msgid "Requires Clarification to Approve"
 msgstr "richiede chiarimenti"
 
@@ -1222,9 +1221,8 @@ msgstr "ritirati"
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:137
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:224
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:269
-#, fuzzy
 msgid "Requires Clarification to Receive"
-msgstr "necessita chiarimenti"
+msgstr "necessita chiarimenti per ricevere"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:76
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:134
@@ -1304,9 +1302,8 @@ msgid "Bill Withdrawn"
 msgstr "ritirare disegno di legge"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:90
-#, fuzzy
 msgid "Require Clarification to Approve"
-msgstr "richiede chiarimenti"
+msgstr "necessita chiarimenti"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:99
 msgid "Create Question"
@@ -3622,7 +3619,6 @@ msgid "add event"
 msgstr "aggiungi evento"
 
 #: src/bungeni.main/bungeni/ui/forms/viewlets.py:628
-#, fuzzy
 msgid "Timeline"
 msgstr "cronologia"
 
