--- a/wiki/HowTo_InstallFabric.wiki
+++ b/wiki/HowTo_InstallFabric.wiki
@@ -61,3 +61,9 @@ apt-get install build-essential subversion python-dev python-setuptools -y
 easy_install fabric paramiko
 
 }}}
+
+For Redhat/Fedora or rpm-based distributions. 
+
+{{{yum groupinstall "Development Tools" "Legacy Software Development"}}}
+
+should suffice to setup build-essentials on the machine.
