Edited wiki page HowTo_InstallFabric through web user interface.

--- a/wiki/HowTo_InstallFabric.wiki
+++ b/wiki/HowTo_InstallFabric.wiki
@@ -64,6 +64,8 @@ easy_install fabric paramiko
 
 For Redhat/Fedora or rpm-based distributions. 
 
-{{{yum groupinstall "Development Tools" "Legacy Software Development"}}}
+{{{
+yum groupinstall "Development Tools" "Legacy Software Development"
+}}}
 
 should suffice to setup build-essentials on the machine.
