Commit from Bungeni: Pootle Localisation Portal by user flavio.: 988 of 988 messages translated (0 fuzzy).

--- a/bungeni_custom/trunk/translations/bungeni/it/LC_MESSAGES/bungeni.po
+++ b/bungeni_custom/trunk/translations/bungeni/it/LC_MESSAGES/bungeni.po
@@ -3,13 +3,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Wed Apr 27 18:40:41 2011\n"
-"PO-Revision-Date: 2011-04-26 18:46+0300\n"
+"PO-Revision-Date: 2011-04-27 22:07+0300\n"
 "Last-Translator: Flavio <flavio.zeni@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: it\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.0.4\n"
 "Domain: DOMAIN\n"
@@ -3611,9 +3611,8 @@ msgid "End date must be prior to (%s)"
 msgstr "data di fine deve essere anteriore a (%s)"
 
 #: src/bungeni.main/bungeni/ui/forms/viewlets.py:223
-#, fuzzy
 msgid "Contacts"
-msgstr "contenuto"
+msgstr "Indirizzi"
 
 #: src/bungeni.main/bungeni/ui/forms/viewlets.py:244
 msgid "Personal Info"
