Commit from Bungeni: Pootle Localisation Portal by user undesa.: 988 of 988 messages translated (0 fuzzy).

--- a/bungeni_custom/trunk/translations/bungeni/en/LC_MESSAGES/bungeni.po
+++ b/bungeni_custom/trunk/translations/bungeni/en/LC_MESSAGES/bungeni.po
@@ -3,13 +3,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Wed Apr 27 18:40:41 2011\n"
-"PO-Revision-Date: 2011-04-26 15:56+0300\n"
-"Last-Translator: Murithi <bungeni.translator@gmail.com>\n"
+"PO-Revision-Date: 2011-04-29 11:34+0300\n"
+"Last-Translator: UNDESA <bungeni.translator@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: en\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.0.4\n"
 "Language-Code: en\n"
@@ -3603,9 +3603,8 @@ msgid "End date must be prior to (%s)"
 msgstr "end date must be prior to (%s)"
 
 #: src/bungeni.main/bungeni/ui/forms/viewlets.py:223
-#, fuzzy
 msgid "Contacts"
-msgstr "content"
+msgstr "contacts"
 
 #: src/bungeni.main/bungeni/ui/forms/viewlets.py:244
 msgid "Personal Info"
