Commit from Bungeni: Pootle Localisation Portal by user murithi.: 997 of 997 messages translated (0 fuzzy).

--- a/bungeni_custom/trunk/translations/bungeni/en/LC_MESSAGES/bungeni.po
+++ b/bungeni_custom/trunk/translations/bungeni/en/LC_MESSAGES/bungeni.po
@@ -3,13 +3,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Wed May  4 12:12:33 2011\n"
-"PO-Revision-Date: 2011-04-29 11:34+0300\n"
-"Last-Translator: UNDESA <bungeni.translator@gmail.com>\n"
+"PO-Revision-Date: 2011-05-04 12:23+0300\n"
+"Last-Translator: Murithi <bungeni.translator@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: en\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.0.4\n"
 "Language-Code: en\n"
@@ -1065,19 +1065,16 @@ msgid "First Reading Pending"
 msgstr "first reading pending"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:203
-#, fuzzy
 msgid "Active User"
-msgstr "notice date"
+msgstr "active"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:204
-#, fuzzy
 msgid "Inactive User"
-msgstr "inactive event"
+msgstr "inactive user"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:205
-#, fuzzy
 msgid "Deceased User"
-msgstr "delete user"
+msgstr "deceased"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:208
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:215
@@ -2378,19 +2375,16 @@ msgid "Address Type"
 msgstr "address type"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1341
-#, fuzzy
 msgid "Postal address type"
-msgstr "address type"
+msgstr "postal address type"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1342
-#, fuzzy
 msgid "Postal address types"
-msgstr "address types"
+msgstr "postal address types"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1347
-#, fuzzy
 msgid "Postal address type name"
-msgstr "address type"
+msgstr "address type name"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1355
 msgid "Addresses"
@@ -2751,14 +2745,12 @@ msgid "Bill version"
 msgstr "bill version"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:2314
-#, fuzzy
 msgid "Question type"
 msgstr "question type"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:2315
-#, fuzzy
 msgid "Question types"
-msgstr "question type"
+msgstr "question types"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:2320
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:2386
@@ -2767,14 +2759,12 @@ msgid "Question Type"
 msgstr "question type"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:2327
-#, fuzzy
 msgid "Response type"
 msgstr "response type"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:2328
-#, fuzzy
 msgid "Response types"
-msgstr "response type"
+msgstr "response types"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:2333
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:2399
@@ -3066,9 +3056,8 @@ msgid "Note"
 msgstr "note"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:339
-#, fuzzy
 msgid "None"
-msgstr "note"
+msgstr "None"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:353
 msgid "A parliament has to be elected before it can be sworn in"
@@ -3275,20 +3264,17 @@ msgid "Substituted by"
 msgstr "substituted by"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:785
-#, fuzzy
 msgid "Member election type"
-msgstr "publications type"
+msgstr "member election type"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:786
-#, fuzzy
 msgid "Member election types"
-msgstr "publications type"
+msgstr "member election types"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:791
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:830
-#, fuzzy
 msgid "Election Type"
-msgstr "election date"
+msgstr "election type"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:799
 #: src/bungeni.main/bungeni/models/roles.zcml:13
@@ -3740,19 +3726,16 @@ msgid "Add bill type..."
 msgstr "add bill type..."
 
 #: src/bungeni.main/bungeni/ui/menu-vocabularies.zcml:22
-#, fuzzy
 msgid "Add question type..."
-msgstr "add question..."
+msgstr "add question type..."
 
 #: src/bungeni.main/bungeni/ui/menu-vocabularies.zcml:29
-#, fuzzy
 msgid "Add response type..."
-msgstr "add address type..."
+msgstr "add response type..."
 
 #: src/bungeni.main/bungeni/ui/menu-vocabularies.zcml:36
-#, fuzzy
 msgid "Add member election type..."
-msgstr "add committee type..."
+msgstr "add member election type..."
 
 #: src/bungeni.main/bungeni/ui/menu-vocabularies.zcml:43
 msgid "Add attendance type..."
@@ -3763,9 +3746,8 @@ msgid "Add committee type..."
 msgstr "add committee type..."
 
 #: src/bungeni.main/bungeni/ui/menu-vocabularies.zcml:57
-#, fuzzy
 msgid "Add postal type..."
-msgstr "add bill type..."
+msgstr "add postal address type..."
 
 #: src/bungeni.main/bungeni/ui/menu-vocabularies.zcml:64
 msgid "Add venue..."
@@ -3923,9 +3905,8 @@ msgid "download odt"
 msgstr "download odt"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:168
-#, fuzzy
 msgid "Add Party Address..."
-msgstr "add parliament address..."
+msgstr "add party address..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:1736
 #: src/bungeni.main/bungeni/ui/menu.zcml:1744
@@ -4047,9 +4028,8 @@ msgid "Add title..."
 msgstr "add title..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:389
-#, fuzzy
 msgid "Add Member Address..."
-msgstr "add user address..."
+msgstr "add member address..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:398
 msgid "The 'Add...' menu - for Group Sittings"
